main/default/objects/Inbound_Email__c/Inbound_Email__c.object-meta.xml
<CustomObject>
    <label>Inbound Email</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>