main/default/objects/Inbound_Email__c/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <label>Html Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>