main/default/objects/Inbound_Email__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>