main/default/objects/Inbound_Email__c/fields/Pharos_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Pharos_Org_ID__c</fullName>
    <label>Pharos Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>